--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "ToGoList server",
   "main": "index.js",
   "scripts": {
-    "pretest": "npx sequelize-cli db:migrate",
+    "migrate": "npx sequelize-cli db:migrate",
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker-build": "docker build -t togo-server .",
+    "docker-run": "npm run docker-build && docker run -p 3001:3001 togo-server"
   },
   "repository": {
     "type": "git",
