--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "migrate": "npx sequelize-cli db:migrate",
-    "undo-migrate": "npx sequelize-cli db:migrate:undo",
+    "undo": "npx sequelize-cli db:migrate:undo",
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docker-build": "docker build -t togo-server .",
