--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "google-auth-library": "^6.1.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "pm2": "^4.5.0",
     "sequelize": "^6.3.5"
